src/main/webapp/less/baromether-backend-style.less
/*Only for prototype*/
.wysi{
	background: url(../images/wysi.png) no-repeat;
	width: 615px;
	height: 25px;
}
/* END Only for prototype*/

header{
	height: 75px;
	border-bottom: 2px solid #efefef;
	img{
		margin: 1.5em 0 0 0;
	}
	.content-header-button{
		float: right;
		margin-top: 2.3em;
	}
}

.login{
	input{
		width: 300px;
	}
	.help-text{
		padding-top: 4px;
		color: #aca5a5;
	}

	button{
		background: url(../images/ico-login.png) 8px 7px no-repeat #529FA2;
		padding-left:20px;
		padding-top: 3px;
   		height: 32px;
		&:hover{
			background: url(../images/ico-login.png) 8px 7px no-repeat #00696C;
		}
	}
}

html, body {
  /* IE 10-11 didn't like using min-height */
  height: 100%;
}

body{
	font-family: arial , sans-serif;
	margin: 0;
	font-size: 10px;
	display: flex;
  	flex-direction: column;
}

.wrapper{
	flex: 1 0 auto;
	padding-bottom: 2em;
}

.container{
	padding: 0 15px 0 15px;
	width: 1280px;
	margin: 0 auto;
}

.mandatory{
	color: #dc1818;		
}

h1{
	font-family:  'Oswald' , sans-serif;
	clear: both;
	font-size: 2.2rem;
	color: #529FA2;
	font-weight: 400;
	margin-top: 1em;
}

label{
	display: block;
	font-size: 1rem;
	color: #333;
	padding-bottom: 5px;
}

label.help-text{
	font-size: 0.8rem;
}

label.relevance{
	font-size: 1.2rem;
	font-weight: 400;
}

.conten-input{
	float: left;
    margin-right: 20px;
}

.disabled{
	label{
		color: #CCC;
	}
}

input{
	border: 1px solid #CCC;
	min-width: 190px;
	height: 25px;
	padding: 5px;
}

select{
	border: 1px solid #CCC;
	min-width: 200px;
	height: 40px;
	padding: 5px;
}

.textarea{
	border: 1px solid #CCC;
	min-width: 603px;
	margin-bottom: 2em;
	height: 225px;
	padding: 5px;
	clear: both;
}

.textarea.disabled{
	opacity: 0.6;
	cursor: not-allowed;
	overflow: auto;
}

input[type=file]{
	padding: 5px 5px 2px 5px;
	margin-right: 1em;
}

a.href-link{
	background: #529FA2;
    display: inline-block;
    font-size: 13px;
    color: #FFF;
    border-radius: 4px;
    cursor: pointer;
    transition: all .3s ease 0s;
    padding: 8px 8px 7px 8px;
    text-decoration: none;
    min-width: 50px;
    &:hover{
    	background: #00696C;
    	color: #C7E2E3; 
    }
}

button{
	background: #529FA2;
	border: 0;
    color: #FFF;
    min-width: 70px;
    height: 30px;
	border-radius: 4px;
	cursor: pointer;
	transition: all 0.3s ease 0s;
}

button:hover{
	background: #00696C;
    color: #C7E2E3; 
}

button.disabled, a.disabled{
	opacity: 0.6;
	pointer-events: none;
	&:hover{
		background: #529FA2;
	}
}

button.upload{
	background: #ececec;
	margin-left: 0px;
	color: #333;
	border-radius: 15px;
	margin-right: 2em;
	&:hover{
		background: #ccc;
	}
}

.conten-button{
	button{
		margin-right: 1em;
	}
}

a{
	color: #337ab7;
	&:hover{
		color: #23527c;
	}
}

table a[target="_blank"]:after, a[target="blank"]:after {
    background: url(../images/external_link.png) transparent right 30% no-repeat;
    margin-left: 0em;
    padding-right: 0;
    width: 10px;
    height: 15px;
    display: inline-block;
    content: " ";
    position: relative;
    top: 2px;
    left: -5px;
    padding-right: 10px;
}

.alert-success{
	display: block;
    float: left;
    clear: both;
    background: url(../images/success-ico.png) 527px 15px #d4edda no-repeat;
    border: 1px solid #c5e7cc;
    color: #155724;
    font-size: 0.8rem;
    line-height: 20px;
    width: 500px;
    margin-top: 2em;
    padding: 1em 4em 1em 1em;
    a{
    	color: #155724;
    	text-decoration: none;
    	font-weight: bold;
    	&:hover{
    		text-decoration: underline;
    	}
    }
}

.alert-danger{
	display: block;
    float: left;
    clear: both;
    background: url(../images/error-ico.png) 522px 15px #f8d7da no-repeat;
    border: 1px solid #f5c6cb;
    color: #721c24;
    font-size: 0.8rem;
    line-height: 20px;
    width: 500px;
    margin-top: 2em;
    padding: 1em 4em 1em 1em;
    a{
    	color: #155724;
    	text-decoration: none;
    	font-weight: bold;
    	&:hover{
    		text-decoration: underline;
    	}
    }
}

table{
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  width: 60%;
  margin-bottom: 1em;
  	th, td{
  		border: 1px solid #9cd8da;
  		padding: 8px;
  		font-size: 0.9rem;
  	}
  	tr:nth-child(even){
		background-color: #f2f2f299;
	}
	tr:hover {
		background-color: #dff8f9;
	}
	th {
	  padding-top: 12px;
	  padding-bottom: 12px;
	  text-align: left;
	  background-color: #D5E6E6;
	  color: #529FA2;
	}
	input{
		width: auto;
		height: auto;
		min-width: auto;
	}

	th:nth-child(1){
		width: 75%;
	}
	th:nth-child(2){
		width: 22%;
	}
	th:nth-child(3){
		width: 3%;
		text-align: center;
	}

	p{
		text-align: left;
	}
}

table.literals{
	width: 80%;
	clear: both;
	th:nth-child(1){
		width: 5%;
		text-align: center;
	}
	td:nth-child(1){
		text-align: center;
	}
	th:nth-child(2){
		width: 30%;
	}
	th:nth-child(3){
		width: 30%;
	}
	th:nth-child(4){
		width: 15%;
		text-align: center;
	}
	td:nth-child(4){
		text-align: center;
	}
	button{
		margin-right: 10px;
	}

	button:nth-child(2){
		margin-right: 0;
	}
}

table.literals.columns-5{
	width: 90%;
	clear: both;
	th:nth-child(1){
		width: 5%;
		text-align: center;
	}
	th:nth-child(2){
		width: 12%;
	}
	th:nth-child(3){
		width: 28%;
	}
	th:nth-child(4){
		width: 28%;
	}
	th:nth-child(5){
		width: 15%;
		text-align: center;
	}
	td:nth-child(1){
		width: 5%;
		text-align: center;
	}
	td:nth-child(2){
		width: 12%;
	}
	td:nth-child(3){
		width: 28%;
	}
	td:nth-child(4){
		width: 28%;
		text-align: left;
	}
	td:nth-child(5){
		width: 15%;
		text-align: center;
	}
	button{
		margin-right: 10px;
	}
	button:nth-child(2){
		margin-right: 0;
	}
}

p.table{
	width: 60%;
    font-size: 0.8rem;
    color: #333;
    margin-top: 0;
}

.popup, .popup-warning, .popup-confirm{
	position: relative;
	display: none;
	font-size: 1rem;
	border: 1px solid #529FA2;
    width: 613px;
    height: auto;
    position: fixed;
    top: 14%;
    left: 30%;
    background: #FFF;
    padding: 3em 2em 2em 2em;
    z-index: 999;
    .close{
    	position: absolute;
    	color: #529FA2;
    	right: 10px;
    	top: 10px;
    	cursor: pointer;
    }
    button{
    	margin-right: 1em;
    }
}

.breadcrumbs{
	padding-top:1em;
	ul{
		list-style: none;
		padding:0;
		li{
			padding: 0;
			float: left;
			a, span{
				background: url(../images/breadcrumb-ico.png) no-repeat 5px 3px;
			    font-family: arial;
			    margin: 0;
			    padding: 0;
			    font-size: 0.9rem;
			    color: #529FA2;
			    text-decoration: none;
			    //font-weight: bold;
			    padding-left: 18px;
			}
		}
		li:first-child{
			span{
				padding-left: 22px;
				background: url(../images/home-ico.png) no-repeat;
				//text-decoration: underline;
				//text-decoration-style: dotted;
				//text-decoration-color: #F6A400;
			}
			a{
				padding-left: 22px;
				background: url(../images/home-ico.png) no-repeat;
				font-weight: bold;
				text-decoration: underline;
				text-decoration-style: dotted;
				text-decoration-color: #F6A400;
				&:hover{
					background: url(../images/home-ico-hover.png) no-repeat;
					color: #F6A400;
				}
			}
		}
	}
}

#home-boxes{
	padding-top: 2em;
	a.box{
		position: relative;
		float: left;
		width: 263px;
		min-height: 100px;
		margin-right: 25px;
		margin-bottom: 25px;
		padding:1.5em;
		border: 4px solid #ebebeb;
		border-radius: 5px;
		text-decoration: none;

		&:hover{
			border: 4px solid #529FA2;
			transition: all 1s;
			.box-title{
				color: #529FA2;
				transition: all 1s;
			}

			.tootip-box{
				visibility: visible;
				opacity: 1;
				transition: opacity 300ms ease-out;
				&:after {
					position: absolute;
					content: " ";
					bottom: 100%;
					left: 5%;
					margin-left: -5px;
					border-width: 5px;
					border-style: solid;
					border-color: transparent transparent #CCC transparent;
				}
			}
		}

		.content-box{
			display: flex;
			flex-wrap: wrap;
		}

		.box-title{
			font-family: sans-serif;
		    width: 177px;
		    font-size: 1.2rem;
		    color: #7d8181;
		    height: 100px;
		    display: flex;
		    align-items: center;
		}
		.box-ico{
			height: 100px;
		    display: flex;
		    align-items: center;
			img{
				width: 100%;
				height: auto;
			}
		}

		.tootip-box{
			width: 220px;
		    height: auto;
		    padding: 1em;
		    border: 2px solid #CCC;
		    color: #333;
		    font-size: 0.8rem;
		    position: absolute;
		    background: #FFF;
		    bottom: -50px;
		    left: 23px;
		    visibility: hidden;
		    opacity: 0;
		    border-radius: 5px;
		    z-index: 99;
		}
		.tootip-box.more-text{
			width: 400px;
		}
	}

	a.box.eurostat{
		.box-title{
		    width: 121px;
		}
	}

	.row1{
		a.box:nth-child(4){
			margin-right: 0;
		}
	}

	.row2{
		clear: both;
		width: 953px;
    	margin: 0 auto;
    	a.box:last-child{
			margin-right: 0;
		}
	}
}

footer{
	flex-shrink: 0;
	background: #B0B2B3;
	color: #333;
    margin: 0 auto;
    width: 100%;
    padding: 1rem 0;
    font-family: arial;
    font-size: 0.8rem;
    a{
    	color: #333;
    	text-decoration: none;
    	&:hover{
    		text-decoration: underline;
    	}
    }
}

.clear-fixed{
	float: left;
	position: relative;
    clear: both;
    margin-top: 2em;
}

.clear-content{
	clear: both;
	padding-top: 2em;
	padding-bottom: 2em;
}

.with-tooltip{
	position: relative;
	.tootip-box{
		visibility: hidden;	
		width: auto;
		min-width: 230px;
	    height: auto;
	    padding: 1em;
	    border: 2px solid #CCC;
	    color: #333;
	    font-size: .8rem;
	    position: absolute;
	    background: #FFF;
	    bottom: -60px;
	    left: 23px;
	    opacity: 0;
	    border-radius: 5px;
	    z-index: 99;
	}
	&:hover{
		.tootip-box{
			visibility: visible;
			opacity: 1;
			transition: opacity 300ms ease-out;
			&:after {
				position: absolute;
				content: " ";
				bottom: 100%;
				left: 5%;
				margin-left: -5px;
				border-width: 5px;
				border-style: solid;
				border-color: transparent transparent #CCC transparent;
			}
		}
	}
}

.closebtn {
  margin-left: 15px;
  color: black;
  float: right;
  font-size: 22px;
  line-height: 20px;
  cursor: pointer;
  transition: 0.3s;
  padding-top: 7px;
}

div.loading-screen{
	display: none;
	background-color: rgba(255,255,255,0.5);
	width: 100%;
    height: 100%;
    position: fixed;
    z-index: 1;
	.loader {
		border: 16px solid #f3f3f3;
		border-radius: 50%;
		border-top: 16px solid #3498db;
		width: 120px;
		height: 120px;
		animation: spin 2s linear infinite;
		top: 29%;
		left: 45%;
		position: fixed;
	}
	.message{
	    top: 48%;
	    left: 30%;
	    position: fixed;
	    width: 515px;
	    font-size: medium;
	    text-align: center;
	}
}

#updateAllButton {
	position: relative;
    top: 27px;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

